# smort-blinds

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: blinds.rs  main.rs  server.rs  timezone.rs  ui.rs  util.rs  wifi.rs
