[package]
name = "smort-blinds"
version = "0.1.0"
authors = ["weisbrja <weisbrja@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "smort-blinds"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = "0.28.1"
anyhow = "1.0.97"
crossbeam-channel = "0.5.14"
time = { version = "0.3.41", features = ["formatting", "local-offset", "serde", "serde-well-known"] }
libc = "0.2.171"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
embedded-hal = "1.0.0"

[build-dependencies]
embuild = "0.33"
